:globe_with_meridians: translated the cosmox game